--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ But it must have the following features:
 </head>
 <body>
   <div class="poster">
-    <img class="motivation-img" src="./assets/images/mymoto1.jpeg" src="woman standing with right arm up" />
+    <img class="motivation-img" src="./assets/images/mymoto1.png" src="woman standing with right arm up" />
     <h1>You are more than a conquer</h1>
     <p>When you learn how much God loves you</p>
   </div>
